test/errors/undefined_variable.vole
// Test: Semantic error - undefined variable
// Expected error: E2002 undefined variable 'y'

func main() {
    let x = y
}
